Fix progress bar layout on narrow screens

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -108,3 +108,21 @@ h2 {
 .bs-wizard-step > .progress > .progress-bar:last-child::before {
   background-color: #f5f5f5;
 }
+
+// Adjust layout for narrow screens
+@media only screen and (max-width: 991px)  {
+  .bs-wizard-step > .progress {
+    position: absolute;
+    width: 100%;
+    height: 8px;
+    background: #4CAF50;
+    top: 47px;
+    margin-top: 20px;
+  }
+  .bs-wizard-step > .step-indicator {
+    margin-top: 10px;
+  }
+  .row#progress-bar {
+    margin-bottom: 50px;
+  }
+}
